--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">karunamgo
+        android:theme="@style/AppTheme">
         <receiver android:name=".MyNotificationPublisher"> </receiver>
         <activity
             android:name=".FilterActivity"
